--- a/HomeMates/VIew/Task.storyboard
+++ b/HomeMates/VIew/Task.storyboard
@@ -96,7 +96,7 @@
                                             <action selector="dismissView:" destination="nmE-Tw-19e" eventType="touchUpInside" id="nyy-mp-Se2"/>
                                         </connections>
                                     </button>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="任務名稱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wek-Dq-ogI" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="任務名稱 (6 字以內)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wek-Dq-ogI" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
                                         <rect key="frame" x="20" y="54" width="200" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="LCG-8e-ITu"/>
@@ -110,7 +110,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="任務積分" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j8J-Jf-XsS" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="任務積分 (1 - 10)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j8J-Jf-XsS" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
                                         <rect key="frame" x="20" y="96" width="200" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="TMn-JC-a6y"/>
